update file reading for SRFLP